# hfst-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.h.in
back-ends/dlfcn/: CMakeLists.txt
back-ends/foma/: interface.l  lex.yy.c  lexc.l  regex.l  regex.y
back-ends/openfst/: CMakeLists.txt
back-ends/openfst/src/include/fst/: compat.h
back-ends/openfstwin/: CMakeLists.txt
back-ends/openfstwin/src/lib/: CMakeLists.txt
back-ends/sfst/: CMakeLists.txt  sgi.h
lib/: CMakeLists.txt
lib/back-ends/: CMakeLists.txt
lib/back-ends/foma/: CMakeLists.txt  fomalib.h  interface.l  lex.yy.c  lexc.l  lexcread.c  regex.y
lib/libhfst/: CMakeLists.txt
lib/libhfst/src/: HfstDataTypes.h  HfstTransducer.cc  hfst.hpp.in
lib/libhfst/src/implementations/: CMakeLists.txt  ConvertLogWeightTransducer.cc  ConvertOlTransducer.cc  ConvertTransducerFormat.h  ConvertTropicalWeightTransducer.cc  SfstTransducer.cc
lib/libhfst/src/parsers/: CMakeLists.txt  PmatchCompiler.h  SfstAlphabet.h  XfstCompiler.h  htwolcpre1-lexer.ll  htwolcpre1-parser.yy  htwolcpre2-parser.yy  htwolcpre3-parser.yy  lexc-lexer.ll  lexc-utils.cc  xfst-lexer.ll  xfst-parser.yy  xfst-utils.h
lib/libhfst/src/parsers/alphabet_src/: Alphabet.h
lib/libhfst/src/parsers/io_src/: InputReader.h
lib/libhfst/src/parsers/rule_src/: ConflictResolvingLeftArrowRule.h  LeftArrowRule.h  LeftArrowRuleContainer.h  LeftRestrictionArrowRule.h  RuleContainer.h
lib/libhfst/src/parsers/string_src/: string_manipulation.h
lib/libhfst/src/parsers/variable_src/: RuleVariablesConstIterator.h  VariableContainer.h  VariableDefs.h  VariableValueIterator.h
lib/tools/src/: CMakeLists.txt  FunctionalTransducer.h  hfst-binary-tool.cc  hfst-compose-intersect.cc  hfst-compose.cc  hfst-conjunct.cc  hfst-determinize.cc  hfst-eliminate-flags.cc  hfst-flookup.cc  hfst-format.cc  hfst-fst2fst.cc  hfst-grep.cc  hfst-guessify.cc  hfst-info.cc  hfst-insert-freely.cc  hfst-lookup.cc  hfst-name.cc  hfst-pmatch.cc  hfst-pmatch2fst.cc  hfst-program-options.cc  hfst-prune-alphabet.cc  hfst-push-labels.cc  hfst-push-weights.cc  hfst-regexp2fst.cc  hfst-remove-epsilons.cc  hfst-repeat.cc  hfst-split.cc  hfst-tail.cc  hfst-tokenize.cc  lexc-readline-ui.cc
lib/tools/src/hfst-proc/: alphabet.cc  hfst-proc.h
lib/tools/src/hfst-tagger/src/: hfst-open-input-file-for-tagger.cc  hfst-reweight-tagger.cc
lib/tools/src/hfst-tagger/src/build_model_src/: LexicalModelBuilder.h  ModelBuilder.h  TaggerBuilder.h  WeightedStringVectorCollection.h  string_handling.h
lib/tools/src/hfst-tagger/src/use_model_src/: AcyclicAutomaton.h  DataTypes.h  SentenceTransducer.h  SequenceModelComponentPair.h  SequenceTagger.h
libhfst/src/: CMakeLists.txt  HfstInputStream.h  HfstOutputStream.h  HfstStrings2FstTokenizer.h  HfstTransducer.h
libhfst/src/implementations/: ConvertFomaTransducer.cc  ConvertOlTransducer.cc  ConvertSfstTransducer.cc  ConvertTransducerFormat.cc  ConvertXfsmTransducer.cc  FomaTransducer.cc  LogWeightTransducer.cc
libhfst/src/implementations/compose_intersect/: ComposeIntersectLexicon.h  ComposeIntersectUtilities.h
libhfst/src/parsers/: HfstTwolcDefs.h  LexcCompiler.cc  LexcCompiler.h  XfstCompiler.cc  XreCompiler.h  grammar_defs.h  htwolcpre1-lexer.ll  htwolcpre2-lexer.ll  htwolcpre3-lexer.ll  lexc-parser.yy  lexc-utils.h  xfst-utils.cc
libhfst/src/parsers/commandline_src/: CommandLine.cc  CommandLine.h
libhfst/src/parsers/io_src/: input_defs.h
libhfst/src/parsers/rule_src/: ConflictResolvingRightArrowRule.h  OtherSymbolTransducer.h  RightArrowRule.h  RightArrowRuleContainer.h  Rule.h  TwolCGrammar.h
libhfst/src/parsers/variable_src/: ConstContainerIterator.h  MatchedConstContainerIterator.h  MixedConstContainerIterator.h  RuleSymbolVector.h  RuleVariables.h  VariableBlock.h  VariableBlockContainer.h  VariableContainerBase.h  VariableValues.h
src/: lib.rs
tools/src/: hfst-affix-guessify.cc  hfst-check-alpha.cc  hfst-commandline.cc  hfst-commandline.h  hfst-compare.cc  hfst-concatenate.cc  hfst-disjunct.cc  hfst-edit-metadata.cc  hfst-expand-equivalences.cc  hfst-fst2strings.cc  hfst-fst2txt.cc  hfst-guess.cc  hfst-head.cc  hfst-invert.cc  hfst-lexc-compiler.cc  hfst-minimize.cc  hfst-multiply.cc  hfst-pair-test.cc  hfst-preprocess-for-optimized-lookup-format.cc  hfst-priority-disjunct.cc  hfst-project.cc  hfst-realign.cc  hfst-reverse.cc  hfst-reweight.cc  hfst-shuffle.cc  hfst-strings2fst.cc  hfst-strip-header.cc  hfst-substitute.cc  hfst-subtract.cc  hfst-summarize.cc  hfst-tool-metadata.h  hfst-traverse.cc  hfst-txt2fst.cc  hfst-unary-tool.cc
tools/src/hfst-tagger/src/: hfst-build-tagger.cc  hfst-tag.cc  unit_test_aux.h
tools/src/hfst-tagger/src/build_model_src/: FstBuilder.h  SequenceModelBuilder.h
tools/src/hfst-tagger/src/use_model_src/: DelayedSequenceModelComponent.h  NewLexicalModel.h  SentenceTagger.h  SequenceModelComponent.h
tools/src/parsers/: hfst-xfst.cc
wrapper/: wrapper.cpp  wrapper.hpp
